--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,5 +11,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Bricksans:wght@400;600;700&display=swap" rel="stylesheet">
+
   </body>
 </html>
